# chatter

./: .gitignore  .travis.yml  CMakeLists.txt  LICENCE  README.md
examples/: CMakeLists.txt  main.cpp
include/chatter/: chatter.h  config.h  event.h  host.h  hostaddress.h  ipaddress.h  packet.h  packet_listener.h  packetpool.h  peer.h  platform.h  protocol.h  types.h
src/: CMakeLists.txt  host.cpp  hostaddress.cpp  ipaddress.cpp  packet.cpp  packet_listener.cpp  peer.cpp  protocol.cpp  unix.cpp
